--- a/background.html
+++ b/background.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grouped Tab Trees</title>
+    <title>Tab Tree Groups</title>
   </head>
   <body>
   </body>
